# lab

./: Conv.ipynb  FlashAttention.ipynb  FlashMLP.ipynb  INTLayerNorm.ipynb  RemovePadding.ipynb  demo_jacobi_correct.cpp  fp16_bf16.ipynb  quantization.ipynb  repetition_penalty.ipynb  script.sh  stride.ipynb
cpp_reference/: CMakeLists.txt  helper.h  lock_gurad_.cpp  move_.cpp  optional_.cpp  ptr_shared_ptr.cpp
llm/: LLM_analysis.ipynb  chat_debug.cpp  chat_dump.cpp  chatglm2_removetile.py  chatglm2_split.py  chatglm3_prefill_slice.py  cmp_diff.py  cmp_diff_valid_length.py  create_npz.py  demo_debug.cpp  kvcache_quantization.py  mlp_slice.py  qwen_split.py  tpu_perf_infer.py  tpu_perf_infer_share.py  utils.cpp
